js262/test/language/expressions/assignmenttargettype/parenthesized-primaryexpression-literal-numeric.js


/*---
description: PrimaryExpression Literal NumericLiteral; Return invalid. (ParenthesizedExpression)
esid: sec-grouping-operator-static-semantics-assignmenttargettype
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    ParenthesizedExpression: (Expression)

    Return AssignmentTargetType of Expression.
---*/

$DONOTEVALUATE();

(0) = 1;
